2006-10-15  Daniel Drake  <dsd@gentoo.org>

	* libgnome/gnome-url.c: Interpret GNOME_VFS_ERROR_NOT_FOUND
	(bug #360932)

2006-09-26  Matthew Barnes  <mbarnes@redhat.com>

	* doc/reference/libgnomeui-docs.sgml: Make the API documentation
	easier to navigate (bug #357834).

2006-09-10  Tor Lillqvist  <tml@novell.com>

	* libgnome-zip.in: Include also
	$prefix/etc/gconf/gconf.xml.defaults in the zipfile.

======================== 2.16.0 ===========================

2006-08-31  Thomas Wood  <thos@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Revert the default gtk+
	theme name

2006-08-18  Kjartan Maraas  <kmaraas@gnome.org>

	* monikers/bonobo-moniker-conf-indirect.c:
	(bonobo_moniker_conf_indirect_resolve): Fix a leak.

======================= 2.15.2 =========================

2006-08-08  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist gtk-doc.make too.

2006-08-08  Thomas Wood  <thos@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Updated the gtk+ theme
	key to reflect the new name of the default theme

======================= 2.15.1 =========================

2006-07-10 Kjartan Maraas <kmaraas@gnome.org>

	* Remove excessive whitespace all over and release 2.15.1.

2006-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: From bug #338276:
	The new gconf keys, /desktop/gnome/interface/show_input_method_menu and
	/desktop/gnome/interface/show_unicode_menu should default to true 
	instead of false as they do now. Otherwise, the user's abiliity to 
	change input method and insert some control characters from the text 
	input's context menu will vanish without trace once he upgrades to 
	gtk+ 2.9.

2006-06-13  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-config.c
	* libgnome/gnome-help.c
	* libgnome/gnome-init.c:
	Use gstdio wrappers consistently. A couple of spots had slipped
	through the cracks and still used the unwrapped C library